# classproject

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  shoplist-b42d0-firebase-adminsdk-fbsvc-29230bf90e.json  shoplist-b42d0-firebase-adminsdk-fbsvc-be3429d055.json
backend/src/: main.py
backend/src/mysite/: main.py
database-backup/: items.sql
frontend/static/: index.html  index.js  style.css
