[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysite"
description = "Minimal shop list"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
  "fastapi",
  " uvicorn",
  "firebase_admin"
]
[tool.setuptools.packages.find]
where = ["src"]
